tests/error/types.nx
fun main() = (
    if 12 then
        print "Hello\n";
    print 12;
    printi "hello";
)
