tests/error/types.stderr
error: Unexpected type int32, expecting bool
   --> tests/error/types.nx:2:8
  |
2 |     if 12 then
  |        ^^

error: Unexpected type int32, expecting string
   --> tests/error/types.nx:4:11
  |
4 |     print 12;
  |           ^^

error: Unexpected type string, expecting int32
   --> tests/error/types.nx:5:12
  |
5 |     printi "hello";
  |            ^^^^^^^

